--- a/templates/history.html
+++ b/templates/history.html
@@ -1,10 +1,3 @@
-{% extends "layout.html" %}
-
-{% block title %}
-    History
-{% endblock %}
-
-{% block main %}
 <div class="container">
     <img src="../static/images/history.svg" class="background">
     <h1>History</h1>
@@ -23,6 +16,8 @@
             <td>{{ bought_list[i].time }}</td>
         </tr>
         {% endfor %}
+    </table>
+
     <table class="table table-hover">
         <tr class="thead-light">
             <th scope="col">Stocks</th>
@@ -39,5 +34,9 @@
         </tr>
         {% endfor %}
     </table>
+
+    <!-- Pie chart section -->
+    <div class="pie-chart-container">
+        <canvas id="pieChart"></canvas>
+    </div>
 </div>
-{% endblock %}
